contact us actualizado

--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
         </video>
       </section>
 
+      <h1 class="titulo1">FISHER ISLAND LUXURY RENTALS</h1>
+
       <section class="fisher-island-luxury-rentals">
-        <h1 class="titulo1">FISHER ISLAND LUXURY RENTALS</h1>
+        
 
         <img
           class="imageninteractiva"
@@ -145,7 +147,13 @@
         />
         <!-- Esta imagen quiero que sea interactiva, en el caso de no poder hacerlo la voy a quitar-->
 
+        </section>
+
         <h2 class="titulo2">EXCLUSIVE PROPERTIES</h2>
+
+        <section>
+
+        
         <a href=""></a><a href=""></a><a href=""></a>
         <!-- Todas las propiedades deberia traerla de una base de datos de manera automatica, por de momento lo dejo en blanco-->
       </section>
