cambio en el main de contact/us

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -50,7 +50,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="page-container">
       <h1 class="titulo1-listyourproperty">CONTACT US</h1>
 
       <div class="container text-center">
